styled navbar with correct spacing

--- a/src/components/NavBar.css
+++ b/src/components/NavBar.css
@@ -1,3 +1,5 @@
 ul {
-  display: inline;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
